Add index.jsx and components folder with Tracking module

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,29 +3,30 @@
 client_id = "e56855f068d35fe1fc96e73bf90ae937"
 name = "Attribix.app"
 handle = "attribix-app"
-application_url = "https://example.com/"
+application_url = "https://cingular-tabs-weddings-annoying.trycloudflare.com"
 embedded = true
 
 [build]
+automatically_update_urls_on_dev = true
 include_config_on_deploy = true
 
 [webhooks]
 api_version = "2025-04"
 
   [[webhooks.subscriptions]]
-  topics = [ "app/uninstalled" ]
-  uri = "/webhooks/app/uninstalled"
-
-  [[webhooks.subscriptions]]
   topics = [ "app/scopes_update" ]
   uri = "/webhooks/app/scopes_update"
+
+  [[webhooks.subscriptions]]
+  topics = [ "app/uninstalled" ]
+  uri = "/webhooks/app/uninstalled"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "write_products"
 
 [auth]
-redirect_urls = [ "https://example.com/api/auth" ]
+redirect_urls = ["https://cingular-tabs-weddings-annoying.trycloudflare.com/auth/callback", "https://cingular-tabs-weddings-annoying.trycloudflare.com/auth/shopify/callback", "https://cingular-tabs-weddings-annoying.trycloudflare.com/api/auth/callback"]
 
 [pos]
 embedded = false
