--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,7 +1,7 @@
 client_id = "e56855f068d35fe1fc96e73bf90ae937"
 name = "Attribix.app"
 handle = "attribix-app"
-application_url = "https://generates-pipe-heavy-fields.trycloudflare.com"
+application_url = "https://0b19-217-70-250-212.ngrok-free.app"
 embedded = true
 
 [build]
@@ -28,7 +28,7 @@ api_version = "2025-04"
 scopes = "write_products"
 
 [auth]
-redirect_urls = ["https://generates-pipe-heavy-fields.trycloudflare.com/auth/callback", "https://generates-pipe-heavy-fields.trycloudflare.com/auth/shopify/callback", "https://generates-pipe-heavy-fields.trycloudflare.com/api/auth/callback"]
+redirect_urls = ["https://0b19-217-70-250-212.ngrok-free.app/auth/callback", "https://0b19-217-70-250-212.ngrok-free.app/auth/shopify/callback", "https://wall-if-nashville-dreams.trycloudflare.com/api/auth/callback"]
 
 [pos]
 embedded = false
