--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,7 +1,7 @@
 client_id = "e56855f068d35fe1fc96e73bf90ae937"
 name = "Attribix.app"
 handle = "attribix-app"
-application_url = "https://0b19-217-70-250-212.ngrok-free.app"
+application_url = "https://calculator-variance-increases-these.trycloudflare.com"
 embedded = true
 
 [build]
@@ -24,11 +24,10 @@ api_version = "2025-04"
   uri = "/webhooks/orders_create"
 
 [access_scopes]
-# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "write_products"
 
 [auth]
-redirect_urls = ["https://0b19-217-70-250-212.ngrok-free.app/auth/callback", "https://0b19-217-70-250-212.ngrok-free.app/auth/shopify/callback", "https://wall-if-nashville-dreams.trycloudflare.com/api/auth/callback"]
+redirect_urls = ["https://calculator-variance-increases-these.trycloudflare.com/auth/callback", "https://calculator-variance-increases-these.trycloudflare.com/auth/shopify/callback", "https://calculator-variance-increases-these.trycloudflare.com/api/auth/callback"]
 
 [pos]
 embedded = false
