Your message for today's work

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,40 @@
-.cache
-build
+# node / build
 node_modules
+build
+dist
+.cache
+.npm
+pnpm-lock.yaml
+yarn.lock
+npm-debug.log*
+
+# test / tooling
+coverage
+.husky
+
+# local env / secrets
+.env
+.env.*
+!.env.example
+
+# editor / os
+.vscode
+.idea
+.DS_Store
+Thumbs.db
+
+# git / misc
+.git
+.gitignore
+
+# fly / docker meta (don’t ship those)
+fly.toml
+docker-compose.yml
+Dockerfile.local
+.dockerignore.local
+
+# logs
+*.log
+
+# TypeScript artifacts (if any generated locally)
+*.tsbuildinfo
