--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "attribix-app",
   "private": true,
-  "scripts": {
-    "build": "remix vite:build",
-    "dev": "shopify app dev",
-    "config:link": "shopify app config link",
-    "generate": "shopify app generate",
-    "deploy": "shopify app deploy",
-    "config:use": "shopify app config use",
-    "env": "shopify app env",
-    "start": "node index.js",
-    "docker-start": "npm run setup && npm run start",
-    "setup": "prisma generate && prisma db push",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "shopify": "shopify",
-    "prisma": "prisma",
-    "graphql-codegen": "graphql-codegen",
-    "vite": "vite"
-  },
   "type": "module",
   "engines": {
     "node": "^18.20 || ^20.10 || >=21.0.0"
+  },
+  "scripts": {
+    "dev": "shopify app dev",
+    "build": "npm run prisma:generate:prod && remix vite:build",
+    "start": "remix-serve build/server/index.js --host 0.0.0.0 --port 8080",
+    "prisma:generate:local": "prisma generate --schema=prisma/schema.prisma",
+    "db:push:local": "prisma db push --schema=prisma/schema.prisma",
+    "prisma:generate:prod": "prisma generate --schema=prisma/schema.prod.prisma",
+    "migrate:deploy:prod": "prisma migrate deploy --schema=prisma/schema.prod.prisma",
+    "config:link": "shopify app config link",
+    "config:use": "shopify app config use",
+    "deploy": "shopify app deploy",
+    "env": "shopify app env",
+    "generate": "shopify app generate",
+    "shopify": "shopify",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "graphql-codegen": "graphql-codegen",
+    "vite": "vite",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
@@ -36,11 +38,11 @@
     "@shopify/shopify-app-remix": "^3.7.0",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
     "@shopify/storefront-api-client": "^1.0.8",
+    "dotenv": "^16.4.5",
     "isbot": "^5.1.0",
     "prisma": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.15.4",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
@@ -49,8 +51,8 @@
     "@shopify/api-codegen-preset": "^1.1.1",
     "@types/eslint": "^9.6.1",
     "@types/node": "^22.2.0",
-    "@types/react": "^18.2.31",
-    "@types/react-dom": "^18.2.14",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^10.0.1",
     "prettier": "^3.2.4",
