--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "remix vite:dev",
-    "build": "npm run prisma:generate && remix vite:build",
+    "build": "remix vite:build",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate --schema=prisma/schema.prisma",
@@ -16,13 +16,14 @@
     "prisma:migrate": "prisma migrate dev --name init"
   },
   "dependencies": {
-    "@prisma/client": "^6.10.1",
+    "@prisma/client": "^6.15.0",
     "@remix-run/node": "^2.17.0",
     "@remix-run/react": "^2.17.0",
     "@remix-run/serve": "^2.17.0",
     "@shopify/app-bridge-react": "^4.1.0",
     "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-app-remix": "3.8.5",
+    "@shopify/shopify-app-session-storage-memory": "^4.0.20",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.9",
     "cookie": "^0.6.0",
     "react": "^18.3.1",
@@ -34,7 +35,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "prisma": "^6.10.1",
+    "prisma": "^6.15.0",
     "typescript": "^5.6.2",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
