--- a/fly.toml
+++ b/fly.toml
@@ -2,19 +2,11 @@ app = "attribix-app"
 primary_region = "fra"
 
 [build]
+  # Dockerfile in repo root
   dockerfile = "Dockerfile"
 
 [env]
-  NODE_ENV = "production"
-
-[deploy]
-  # No migrations folder -> use db push
-  release_command = "npx prisma db push --schema=prisma/schema.postgres.prisma"
-
-[[vm]]
-  memory = "512mb"
-  cpu_kind = "shared"
-  cpus = 1
+  PORT = "8080"
 
 [http_service]
   internal_port = 8080
@@ -23,3 +15,17 @@ primary_region = "fra"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[checks]
+  [checks.health]
+    port = 8080
+    type = "http"
+    interval = "15s"
+    timeout = "2s"
+    grace_period = "5s"
+    method = "get"
+    path = "/health"
+
+[deploy]
+  # This runs AGAINST your Fly Postgres (uses Fly secrets), creating the Session table, etc.
+  release_command = "npx prisma db push --schema=prisma/schema.postgres.prisma"
