--- a/fly.toml
+++ b/fly.toml
@@ -1,11 +1,15 @@
+# fly.toml
 app = "attribix-app"
 primary_region = "fra"
 
 [build]
-  # Dockerfile in repo root
+  # Use the Dockerfile in the repo root
   dockerfile = "Dockerfile"
 
 [env]
+  # Public, non-secret base URL of your app (Shopify uses this for redirects)
+  APP_URL = "https://attribix-app.fly.dev"
+  NODE_ENV = "production"
   PORT = "8080"
 
 [http_service]
@@ -15,6 +19,11 @@ primary_region = "fra"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+  [http_service.concurrency]
+    type = "requests"
+    soft_limit = 50
+    hard_limit = 100
 
 [checks]
   [checks.health]
@@ -27,5 +36,10 @@ primary_region = "fra"
     path = "/health"
 
 [deploy]
-  # This runs AGAINST your Fly Postgres (uses Fly secrets), creating the Session table, etc.
-  release_command = "npx prisma db push --schema=prisma/schema.postgres.prisma"
+  # Force apply schema even if it drops columns / alters PKs
+  release_command = "npx prisma db push --schema=prisma/schema.postgres.prisma --accept-data-loss"
+
+[vm]
+  memory = "1024MB"
+  cpu_kind = "shared"
+  cpus = 1
