--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": ">=18.17"
+    "node": ">=20.18 <21"
   },
   "scripts": {
     "dev": "remix vite:dev",
@@ -14,7 +14,10 @@
     "prisma:gen:dev": "prisma generate --schema=prisma/schema.prisma",
     "prisma:migrate:dev": "prisma migrate dev --schema=prisma/schema.prisma --name init",
     "prisma:gen:prod": "prisma generate --schema=prisma/schema.postgres.prisma",
-    "prisma:migrate:deploy": "prisma migrate deploy --schema=prisma/schema.postgres.prisma"
+    "prisma:migrate:deploy": "prisma migrate deploy --schema=prisma/schema.postgres.prisma",
+    "build:pixel": "esbuild extensions/attribix-pixel/src/index.ts --bundle --format=esm --outfile=extensions/attribix-pixel/dist/main.js",
+    "build:all": "npm run build:pixel && npm run build",
+    "clean:win": "powershell -NoProfile -Command \"if (Test-Path node_modules) { Remove-Item -Recurse -Force node_modules }; if (Test-Path package-lock.json) { Remove-Item -Force package-lock.json }\""
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
@@ -38,6 +41,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "arg": "^5.0.2",
+    "esbuild": "^0.21.5",
     "prisma": "^6.15.0",
     "typescript": "^5.6.2",
     "vite": "^6.3.5",
