--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,21 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2022", "DOM"],
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "lib": ["DOM", "ES2022"],
     "jsx": "react-jsx",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "noEmit": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "baseUrl": ".",
     "paths": {
       "~/*": ["app/*"]
-    },
-    "types": ["node", "vite/client"],
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "noEmit": true,
-    "forceConsistentCasingInFileNames": true
+    }
   },
-  "include": [
-    "remix.env.d.ts",
-    "vite.config.ts",
-    "vite.config.js",
-    "app/**/*.ts",
-    "app/**/*.tsx"
-  ],
-  "exclude": ["node_modules", "build"]
+  "include": ["app/**/*.ts", "app/**/*.tsx", "app/**/*.js", "app/**/*.jsx", "remix.env.d.ts"],
+  "exclude": ["node_modules"]
 }
