--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@shopify/shopify-app-remix": "^3.8.5",
     "@shopify/shopify-app-session-storage-memory": "^4.0.20",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.9",
+    "@shopify/web-pixels-extension": "^2.18.0",
     "cookie": "^0.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
