Your message for today's work

--- a/extensions/attribix-pixel/shopify.extension.toml
+++ b/extensions/attribix-pixel/shopify.extension.toml
@@ -1,7 +1,7 @@
+﻿# extensions/attribix-pixel/shopify.extension.toml
 
-uid = "fb1381aa-6659-44e8-abae-64b497a8b04d"
 type = "web_pixel_extension"
 name = "Attribix Pixel"
-handle = "attribix-pixel"
+handle = "attribix-pixel-v2"
 runtime_context = "storefront"
 main = "dist/main.js"
