--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,4 +1,4 @@
-# Learn more: https://shopify.dev/docs/apps/tools/cli/configuration
+# Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "e56855f068d35fe1fc96e73bf90ae937"
 name = "Attribix"
@@ -10,7 +10,6 @@ handle = "attribix-app"
 api_version = "2025-04"
 
 [access_scopes]
-# IMPORTANT: pixels scopes are required
 scopes = "read_customers,read_orders,read_products,read_script_tags,write_products,write_script_tags,read_pixels,write_pixels"
 
 [auth]
@@ -20,12 +19,10 @@ redirect_urls = [
   "https://attribix-app.fly.dev/auth"
 ]
 
-# You can keep app_proxy if you really need it, but it's not required for the pixel
-# Remove it if you don't use it:
-# [app_proxy]
-# url = "https://shows-princess-miss-fiction.trycloudflare.com/pixel.js"
-# subpath = "pixel"
-# prefix = "apps"
+[app_proxy]
+url = "https://shows-princess-miss-fiction.trycloudflare.com/pixel.js"
+subpath = "pixel"
+prefix = "apps"
 
 [pos]
 embedded = false
