--- a/package.json
+++ b/package.json
@@ -1,69 +1,32 @@
 {
   "name": "attribix-app",
+  "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "build": "remix vite:build",
-    "dev": "shopify app dev",
-    "config:link": "shopify app config link",
-    "generate": "shopify app generate",
-    "deploy": "shopify app deploy",
-    "config:use": "shopify app config use",
-    "env": "shopify app env",
-    "start": "node index.js",
-    "docker-start": "npm run setup && npm run start",
-    "setup": "prisma generate && prisma db push",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "shopify": "shopify",
-    "prisma": "prisma",
-    "graphql-codegen": "graphql-codegen",
-    "vite": "vite"
-  },
   "type": "module",
-  "engines": {
-    "node": "^18.20 || ^20.10 || >=21.0.0"
+  "scripts": {
+    "clean": "rimraf build .vite node_modules/.vite",
+    "build": "rimraf build && remix vite:build",
+    "dev": "shopify app dev",
+    "start": "remix-serve ./build/server/index.js",
+    "prisma:generate": "prisma generate",
+    "prisma:deploy": "prisma migrate deploy"
   },
   "dependencies": {
-    "@prisma/client": "^6.2.1",
-    "@remix-run/dev": "^2.16.8",
-    "@remix-run/fs-routes": "^2.16.1",
-    "@remix-run/node": "^2.16.1",
-    "@remix-run/react": "^2.16.1",
-    "@remix-run/serve": "^2.16.1",
-    "@shopify/app-bridge-react": "^4.1.6",
-    "@shopify/polaris": "^12.27.0",
-    "@shopify/shopify-app-remix": "^3.7.0",
-    "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
-    "@shopify/storefront-api-client": "^1.0.8",
-    "isbot": "^5.1.0",
-    "prisma": "^6.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recharts": "^2.15.4",
-    "vite-tsconfig-paths": "^5.0.1"
-  },
-  "devDependencies": {
-    "@remix-run/eslint-config": "^2.16.1",
-    "@remix-run/route-config": "^2.16.1",
-    "@shopify/api-codegen-preset": "^1.1.1",
-    "@types/eslint": "^9.6.1",
-    "@types/node": "^22.2.0",
-    "@types/react": "^18.2.31",
-    "@types/react-dom": "^18.2.14",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^10.0.1",
-    "prettier": "^3.2.4",
-    "typescript": "^5.2.2",
-    "vite": "^6.2.2"
-  },
-  "workspaces": [
-    "extensions/*"
-  ],
-  "trustedDependencies": [
-    "@shopify/plugin-cloudflare"
-  ],
-  "resolutions": {
-    "@graphql-tools/url-loader": "8.0.16",
-    "@graphql-codegen/client-preset": "4.7.0",
-    "@graphql-codegen/typescript-operations": "4.5.0"
+    "@remix-run/node": "^2.17.2",
+    "@remix-run/react": "^2.17.2",
+    "@remix-run/serve": "^2.17.2",
+    "@remix-run/dev": "^2.17.2",
+    "@shopify/shopify-app-remix": "^2.4.0",
+    "@shopify/shopify-api": "^11.2.0",
+    "@shopify/polaris": "^12.2.0",
+    "@shopify/app-bridge": "^3.7.5",
+    "@shopify/app-bridge-react": "^3.7.5",
+    "vite": "^5.4.21",
+    "vite-tsconfig-paths": "^5.0.1",
+    "rimraf": "^5.0.10",
+    "typescript": "^5.6.3",
+    "ts-node": "^10.9.2",
+    "prisma": "^6.19.0",
+    "@prisma/client": "^6.19.0"
   }
 }
