--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf build .vite node_modules/.vite",
     "build": "rimraf build && remix vite:build",
     "dev": "shopify app dev",
+    "dev:remix": "remix vite:dev",
     "start": "remix-serve ./build/server/index.js",
     "prisma:generate": "prisma generate",
     "prisma:deploy": "prisma migrate deploy"
@@ -16,7 +17,7 @@
     "@remix-run/dev": "^2.17.2",
     "@remix-run/node": "^2.17.2",
     "@remix-run/react": "^2.17.2",
-    "@remix-run/serve": "^2.17.2",
+    "@remix-run/serve": "2.17.2",
     "@shopify/app-bridge": "^3.7.5",
     "@shopify/app-bridge-react": "4.2.7",
     "@shopify/polaris": "13.9.5",
