fix: fly.io networking + shopify embedded auth stable

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Shopify Admin API
-SHOPIFY_API_KEY=e56855f068d35fe1fc96e73bf90ae937
-SHOPIFY_API_SECRET=1bf73a466b2c9ba594415b8276abe47a
+SHOPIFY_API_KEY=your_shopify_api_key_here
+SHOPIFY_API_SECRET=your_shopify_api_secret_here
 SCOPES=read_products,write_products
 SHOPIFY_APP_URL=https://attribix-app.fly.dev
 SHOP_CUSTOM_DOMAIN=
@@ -10,10 +10,11 @@ VITE_SHOPIFY_DOMAIN=attribix-com.myshopify.com
 VITE_SHOPIFY_API_VERSION=2025-07
 VITE_SHOPIFY_STOREFRONT_TOKEN=your_storefront_api_token_here
 
-# Facebook Pixel
-FB_PIXEL_ID=1077563970618390
-FB_ACCESS_TOKEN=your_facebook_access_token_here
+# Facebook Pixel (server-side)
+FB_PIXEL_ID=your_fb_pixel_id_here
+FB_ACCESS_TOKEN=your_fb_access_token_here
+FB_ENABLED=0
 
-# Database
-DATABASE_URL=postgres://USER:PASSWORD@HOST:5432/DB?sslmode=require
-DATABASE_DIRECT_URL=postgres://USER:PASSWORD@HOST:5432/DB?sslmode=require
+# Database (local dev)
+DATABASE_URL=postgres://attribix_app:password@localhost:5433/attribix_app?sslmode=disable
+DATABASE_DIRECT_URL=postgres://attribix_app:password@localhost:5433/attribix_app?sslmode=disable
