--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "clean": "rimraf build .vite node_modules/.vite",
+    "clean": "rimraf build .vite node_modules/.vite .shopify/dev-bundle",
+    "clean:shopify": "rimraf .shopify/dev-bundle",
+    "clean:vite": "rimraf .vite node_modules/.vite",
     "build": "rimraf build && remix vite:build",
-    "dev": "shopify app dev",
+    "predev:safe": "node ./scripts/predev.mjs",
+    "dev": "npm run predev:safe && shopify app dev",
+    "dev:fly": "npm run predev:safe && shopify app dev --tunnel-url https://attribix-app.fly.dev:443",
+    "dev:fly:reset": "npm run predev:safe && shopify app dev --reset --tunnel-url https://attribix-app.fly.dev:443",
     "dev:remix": "remix vite:dev",
-    "start": "remix-serve ./build/server/index.js",
+    "dev:remix:force": "remix vite:dev --force",
+    "start": "remix-serve ./build/server/index.js --host :: --port 3000",
     "prisma:generate": "prisma generate",
     "prisma:deploy": "prisma migrate deploy"
   },
