--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "remix vite:dev",
     "build": "remix vite:build",
-    "start": "remix-serve ./build/server/index.js",
+    "start": "sh -lc \"remix-serve ./build/server/index.js --host 0.0.0.0 --port ${PORT:-8080}\"",
     "typecheck": "tsc --noEmit",
     "prisma:gen:dev": "prisma generate --schema=prisma/schema.prisma",
     "prisma:migrate:dev": "prisma migrate dev --schema=prisma/schema.prisma --name init",
