fix: use remix serve cli path in prod

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "dev": "remix vite:dev",
     "build": "remix vite:build",
-    "start": "sh -lc \"remix-serve ./build/server/index.js --host 0.0.0.0 --port ${PORT:-8080}\"",
+
+    "start": "node ./node_modules/@remix-run/serve/dist/cli.js ./build/server/index.js --host 0.0.0.0 --port $PORT",
+
     "typecheck": "tsc --noEmit",
     "prisma:gen:dev": "prisma generate --schema=prisma/schema.prisma",
     "prisma:migrate:dev": "prisma migrate dev --schema=prisma/schema.prisma --name init",
