--- a/fly.toml
+++ b/fly.toml
@@ -8,7 +8,6 @@ primary_region = "fra"
 [env]
   APP_URL = "https://attribix-app.fly.dev"
   NODE_ENV = "production"
-  PORT = "3000"
 
 [http_service]
   internal_port = 3000
@@ -31,7 +30,7 @@ primary_region = "fra"
     timeout = "2s"
     grace_period = "10s"
     method = "get"
-    path = "/health"
+    path = "/"
 
 [deploy]
   release_command = "npx prisma db push --schema=prisma/schema.postgres.prisma --accept-data-loss"
