--- a/fly.toml
+++ b/fly.toml
@@ -8,6 +8,7 @@ primary_region = "fra"
 [env]
   APP_URL = "https://attribix-app.fly.dev"
   NODE_ENV = "production"
+  PORT = "3000"
 
 [http_service]
   internal_port = 3000
@@ -27,12 +28,13 @@ primary_region = "fra"
     port = 3000
     type = "http"
     interval = "15s"
-    timeout = "2s"
-    grace_period = "20s"
+    timeout = "5s"
+    grace_period = "45s"
     method = "get"
     path = "/health"
 
 [deploy]
+  # Safe for prod only because you explicitly want schema drift applied
   release_command = "npx prisma db push --schema=prisma/schema.postgres.prisma --accept-data-loss"
 
 [vm]
